--- a/.github/workflows/percy.yml
+++ b/.github/workflows/percy.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Percy run
 
 # Controls when the workflow will run
 on:
@@ -32,3 +32,5 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: percy run
         run: npx percy snapshot snapshots.yml
+        env:
+          PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
