--- a/.github/workflows/percy.yml
+++ b/.github/workflows/percy.yml
@@ -34,3 +34,4 @@ jobs:
         run: npx percy snapshot snapshots.yml
         env:
           PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
+          PERCY_PULL_REQUEST: YOLO
